@@ -20,4 +20,19 @@ $txt['pretty'] = array(
 		</operation>
 	</file>
 
+	<file name="$languagedir/Modifications.english-utf8.php" error="skip">
+		<operation>
+			<search position="end"></search>
+			<add><![CDATA[
+//	Pretty URLs mod
+$txt['pretty_root_url'] = 'Pretty URLs root URL<div class="smalltext">(Without a final slash)</div>';
+$txt['pretty_enable_filters'] = 'Enable URL filters<div class="smalltext">This may be a substantial performance hit</div>';
+$txt['pretty'] = array(
+	'url' => 'Pretty URL',
+	'url_desc' => 'A URL fragment used for boards and topics.<br /><div class="smalltext">Note: this will be processed as only a limited set of characters are allowed - other characters will be converted. Leave blank to use the board name.</div>',
+);
+]]></add>
+		</operation>
+	</file>
+
 </modification>
